--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>المهندس محمد - صيانة الأجهزة المنزلية شبين الكوم</title>
+    
+    <!-- كود إثبات ملكية Google Search Console -->
+    <meta name="google-site-verification" content="5fzpB5QLnPxQKrlHgb7atKwo3EoxvZQj-PScw9yUJhw" />
+    
     <!-- تحميل مكتبة Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
